# Group09P1MedicineProject

./: .gitignore  CMakeLists.txt  README.md
Databases/: doctor.txt  log.txt  medicine.txt  nurse.txt  patients.txt
src/: main.c  store.h
src/Functions/: NDCinformation.c  PatientInformation.c  addMedicine.c  addPatient.c  dispenser.c  editPatient.c  fileOpener.c  findNextId.c  log.c  populateArray.c  readLog.c  readMedicine.c  readPatient.c  startLoginFunction.c  validateAnswers.c
src/Parsers/: doctorParser.c  logParser.c  medicineParser.c  nurseParser.c  parseHelper.c  patientParser.c
src/fileStructs/: doctorStruct.h  logStruct.h  medicineStruct.h  nurseStruct.h  patientStruct.h
